--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -81,4 +81,4 @@ jobs:
           python -m xrfeitoria.utils.publish_plugins update-plugin-info
           git add .
           git commit -m "[bot] Update plugin info"
-          git push origin ${{ github.head_ref }}
+          git push
