--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,6 +8,9 @@ on:
   pull_request:
     types:
       - labeled
+  pull_request_target:
+    types:
+      - labeled
 permissions:
   contents: write
   pull-requests: write
@@ -40,6 +43,8 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          ref: ${{ github.event.pull_request.head.ref }}
+          repository: ${{ github.event.pull_request.head.repo.full_name }}
 
       - id: bumpr
         name: Post bumpr status comment
