--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,7 +5,7 @@ on:
       - main
     tags:
       - 'v*.*.*'
-  pull_request_target:
+  pull_request:
     types:
       - labeled
 permissions:
@@ -34,7 +34,6 @@ jobs:
           if_false: ${{ steps.bumpr.outputs.next_version }}
 
   release-check:
-    if: github.event.action == 'labeled'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -88,6 +87,5 @@ jobs:
           python -m xrfeitoria.utils.publish_plugins update-plugin-info
           git add .
           git commit -a -m "[bot] Update plugin info"
-
-      - name: Push changes
-        uses: ad-m/github-push-action@master
+          # push to the branch
+          git push origin HEAD:main
