--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -86,4 +86,5 @@ jobs:
           python -m xrfeitoria.utils.publish_plugins update-plugin-info
           git add .
           git commit -a -m "[bot] Update plugin info"
+          echo "branch: ${{ github.event.pull_request.head.ref }}"
           git push https://x-access-token:${{ secrets.ACTIONS_PAT }}@github.com/${{ github.repository }} HEAD:${{ github.event.pull_request.head.ref }}
