--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -86,5 +86,10 @@ jobs:
           python -m xrfeitoria.utils.publish_plugins update-plugin-info
           git add .
           git commit -a -m "[bot] Update plugin info"
+          # Get Forked Repository
+
+          echo "url: ${{ github.event.pull_request.head.repo.full_name }}"
           echo "branch: ${{ github.event.pull_request.head.ref }}"
-          git push https://x-access-token:${{ secrets.ACTIONS_PAT }}@github.com/${{ github.repository }} HEAD:${{ github.event.pull_request.head.ref }}
+
+          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.event.pull_request.head.repo.full_name }}.git
+          git push origin HEAD:${{ github.event.pull_request.head.ref }}
