--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -87,5 +87,9 @@ jobs:
 
           python -m xrfeitoria.utils.publish_plugins update-plugin-info
 
-      - uses: reviewdog/action-suggester@v1
-        name: Leave comments on PRs
+      - uses: reviewdog/action-setup@v1
+      - name: Run reviewdog
+        env:
+          REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          reviewdog -reporter=github-pr-review -diff="git diff FETCH_HEAD"
