--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -87,9 +87,10 @@ jobs:
 
           python -m xrfeitoria.utils.publish_plugins update-plugin-info
 
-      - uses: reviewdog/action-setup@v1
-      - name: Run reviewdog
-        env:
-          REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Echo diff content
         run: |
-          reviewdog -reporter=github-pr-review -diff="git diff FETCH_HEAD"
+            diff_content=$(git diff)
+            echo "$diff_content"
+
+      - name: suggester /Leave comments on PRs
+        uses: reviewdog/action-suggester@v1
