--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,7 +5,7 @@ on:
       - main
     tags:
       - 'v*.*.*'
-  pull_request:
+  pull_request_target:
     types:
       - labeled
 permissions:
@@ -87,10 +87,5 @@ jobs:
 
           python -m xrfeitoria.utils.publish_plugins update-plugin-info
 
-      - name: Echo diff content
-        run: |
-            diff_content=$(git diff)
-            echo "$diff_content"
-
-      - name: suggester /Leave comments on PRs
+      - name: suggester / Leave comments on PRs
         uses: reviewdog/action-suggester@v1
