chore: Update XRFeitoriaBpy version to 0.6.0 (#20)
Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -87,5 +87,12 @@ jobs:
 
           python -m xrfeitoria.utils.publish_plugins update-plugin-info
 
-      - name: suggester / Leave comments on PRs
-        uses: reviewdog/action-suggester@v1
+          # Commit changes
+          git add .
+          git commit -m "[bot] Update plugin info"
+
+      - name: Push changes
+        uses: ad-m/github-push-action@master
+
+      # - name: suggester / Leave comments on PRs
+      #   uses: reviewdog/action-suggester@v1
