--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,6 +42,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          ref: ${{ github.event.pull_request.head.sha }}
 
       - id: bumpr
         name: Post bumpr status comment
@@ -83,6 +84,9 @@ jobs:
           fi
 
           python -m xrfeitoria.utils.publish_plugins update-plugin-info
+
+          GIT_URL_ORIGINAL=$(git remote get-url origin)
+          echo "ORIGINAL: $GIT_URL_ORIGINAL"
 
           git add .
           git commit -m "[bot] Update plugin info"
