--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -65,38 +65,42 @@ jobs:
       - name: Determine next version
         if: ${{ !steps.bumpr.outputs.skip }}
         run: |
-          # Get the next version from the previous step
+          echo "::group::Get the next version from the previous step"
           VERSION="${{ steps.bumpr.outputs.next_version }}"
+          echo "Next version: $VERSION"
+          echo "::endgroup::"
 
-          # Git configuration
+          echo "::group::Git configuration"
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git tag -a "$VERSION" -m "Release $VERSION"
+          echo "::endgroup::"
 
-          # Update plugin info
+          echo "::group::Update plugin info"
           pip install .
           if ${{ steps.filter.outputs.blender == 'true' }}; then
             python -m xrfeitoria.utils.publish_plugins update-bpy-version
           fi
-
           if ${{ steps.filter.outputs.unreal == 'true' }}; then
             python -m xrfeitoria.utils.publish_plugins update-uplugin-version
           fi
-
           python -m xrfeitoria.utils.publish_plugins update-plugin-info
+          echo "::endgroup::"
 
-          GIT_URL_ORIGINAL=$(git remote get-url origin)
-          echo "ORIGINAL: $GIT_URL_ORIGINAL"
+          # echo "::group::Set to PR branch/repository"
+          # REPO_OWNER=${{ github.event.pull_request.head.repo.owner.login }}
+          # REPO_NAME=${{ github.event.pull_request.head.repo.name }}
+          # BRANCH_NAME=${{ github.event.pull_request.head.ref }}
+          # GIT_URL="github.com/${REPO_OWNER}/${REPO_NAME}.git"
+          # echo "Pushing to $GIT_URL"
+          # echo "::endgroup::"
 
+          echo "::group::Commit and push"
           git add .
           git commit -m "[bot] Update plugin info"
-          REPO_OWNER=${{ github.event.pull_request.head.repo.owner.login }}
-          REPO_NAME=${{ github.event.pull_request.head.repo.name }}
-          BRANCH_NAME=${{ github.event.pull_request.head.ref }}
-          GIT_URL="github.com/${REPO_OWNER}/${REPO_NAME}.git"
-          echo "Pushing to $GIT_URL"
           git remote set-url origin https://x-access-token:${{ secrets.ACTIONS_PAT }}@${GIT_URL}
           git push origin HEAD:${BRANCH_NAME}
+          echo "::endgroup::"
 
       # - name: suggester / Leave comments on PRs
       #   if: ${{ !steps.bumpr.outputs.skip }}
