chore: Update windows CI pipeline for self-host

--- a/.circleci/continue_config.yml
+++ b/.circleci/continue_config.yml
@@ -31,10 +31,15 @@ jobs:
       - when:
           condition: << pipeline.parameters.build-unreal-plugin >> || << pipeline.parameters.run-unreal-test >>
           steps:
-            - checkout
+            # - checkout
+            - run:
+                name: Clone GitHub repository
+                command: |
+                  git clone << pipeline.git_url >> --branch << pipeline.git_tag >> $env:USERPROFILE\project
             - run:
                 name: "Build Plugins & Run Tests"
                 shell: powershell.exe
+                working_directory: $env:USERPROFILE\project
                 no_output_timeout: 60m
                 environment:
                   BUILD_UNREAL_PLUGIN: << pipeline.parameters.build-unreal-plugin >>
