--- a/.circleci/continue_config.yml
+++ b/.circleci/continue_config.yml
@@ -35,11 +35,11 @@ jobs:
             - run:
                 name: Clone GitHub repository
                 command: |
-                  git clone << pipeline.project.git_url >> --branch << pipeline.git.branch >> $env:USERPROFILE\project
+                  git clone << pipeline.project.git_url >> --branch << pipeline.git.branch >> project
             - run:
                 name: "Build Plugins & Run Tests"
                 shell: powershell.exe
-                working_directory: $env:USERPROFILE\project
+                working_directory: project
                 no_output_timeout: 60m
                 environment:
                   BUILD_UNREAL_PLUGIN: << pipeline.parameters.build-unreal-plugin >>
